chore: remove unnecessary code + comment

--- a/.env.docker
+++ b/.env.docker
@@ -1,6 +1,6 @@
 # Server Configuration
 PORT=5005
-NODE_ENV=production
+APP_ENV=production
 
 # Database Configuration (PostgreSQL)
 # Note: 'postgres-container' is the name we will give to the DB container later
