--- a/.env.example
+++ b/.env.example
@@ -1,6 +1,6 @@
 # Application Settings
 PORT=3000
-NODE_ENV=development
+APP_ENV=development
 
 # Database Settings
 # Options: "sqlite" or "postgres"
